# EXORCIST

./: readme.md
pebs_benchmarking/: makefile
pebs_benchmarking/cat_source/O0/: Makefile  spectre-pht_clang.s  spectre-pht_gcc.s  z3-results_gcc.csv
pebs_benchmarking/cat_source/O1/: Makefile  spectre-pht_clang copy.s  spectre-pht_clang.s  spectre-pht_gcc.s
pebs_benchmarking/cat_source/O2/: Makefile  generate-fomulae.sh  run-smt.sh  spectre-pht_gcc copy.s  spectre-pht_gcc.s
pebs_benchmarking/cat_source/O3/: Makefile  spectre-pht_clang copy.s  spectre-pht_clang.s  spectre-pht_gcc copy.s  spectre-pht_gcc.s  (+1 more)
pebs_mmap_version/: .gitignore  Makefile  conf.h  pebs_buffer.c  pebs_buffer.h  pebs_init.c  pebs_init.h  pebs_message_send.c  pebs_message_send.h  pebs_pub.h  pebs_taine.c  pebs_taine.h  pebs_taine_tool.c  pebs_taine_tool.h  readme.md
pebs_user_mod_src/: CMakeLists.txt  compile_commands.json  readme.md
pebs_user_mod_src/include/: async_analyze_code_tool.h  attack_share_mem.h  conf.h  diasm_code_tool.h  full_diasm_info.h  get_info_by_ptrace.h  netlink_tool.h  share_mem_tool.h  test.h
pebs_user_mod_src/include/beaengine/: BeaEngine.h  basic_types.h  export.h
pebs_user_mod_src/include/static_analyze/: abstract_addr.h  instruction_analyze_tool.h  state_machine.h  state_symbol.h  static_analyze_tools.h
pebs_user_mod_src/src/: async_analyze_code_tool.cpp  conf.cpp  diasm_code_tool.cpp  full_diasm_info.cpp  get_info_by_ptrace.cpp  netlink_tool.cpp  pebs_user_mod.cpp  share_mem_tool.cpp  test.cpp
pebs_user_mod_src/src/static_analyze/: abstract_addr.cpp  instruction_analyze_tool.cpp  state_machine.cpp  state_symbol.cpp  static_analyze_tools.cpp
performance_test/: measure_context_switch_time.sh  mysql_sysbench_test.sh  nginx_wrk_test.sh  redis_sysbench_test.sh  resource_usage.py  stress-ng_test.sh
performance_test/pebs_num/: analyze_num.py
(+1404 files in other folders)
